[package]
name = "bod_parser"
version = "0.1.0"
author = "Joseph Orme <brogramn@gmail.com>"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.74"
